Add Portfolio section

--- a/index.html
+++ b/index.html
@@ -32,14 +32,56 @@
                             <div class="card-top">
                                 <img width="200px" src="./assets/img/avatar.svg"
                                     alt>
-                                <h1 class="fw-bold my-3">START BOOTSTRAP</h1>                               
+                                <h1 class="fw-bold my-3">START BOOTSTRAP</h1>
                             </div>
                             <div class="card-bottom">
-
+                                <div
+                                    class="spacer d-flex justify-content-center align-items-center my-3">
+                                    <div class="bar mx-2 bg_light"></div>
+                                    <i class="fa-solid fa-star fa-2x"></i>
+                                    <div class="bar mx-2 bg_light"></div>
+                                </div>
+                                <h5>GRAPHICAL ARTIST - WEB DEVELOPER -
+                                    ILLUSTRATOR</h5>
                             </div>
                         </div>
                     </div>
                 </div>
+            </section>
+
+            <section class="portfolio">
+                <div class="container text-center py-5">
+                    <h2>PORTFOLIO</h2>
+                    <div
+                        class="spacer d-flex justify-content-center align-items-center my-4">
+                        <div class="bar mx-2 bg_dark"></div>
+                        <i class="fa-solid fa-star fa-2x dark"></i>
+                        <div class="bar mx-2 bg_dark"></div>
+                    </div>
+
+                    <div class="row justify-content-center py-4 row-gap-4">
+                        <div class="col-12 col-lg-6 col-xxl-4">
+                            <img src="./assets/img/cabin.png" alt>
+                        </div>
+                        <div class="col-12 col-lg-6 col-xxl-4">
+                            <img src="./assets/img/cake.png" alt>
+                        </div>
+                        <div class="col-12 col-lg-6 col-xxl-4">
+                            <img src="./assets/img/circus.png" alt>
+                        </div>
+                        <div class="col-12 col-lg-6 col-xxl-4">
+                            <img src="./assets/img/game.png" alt>
+                        </div>
+                        <div class="col-12 col-lg-6 col-xxl-4">
+                            <img src="./assets/img/safe.png" alt>
+                        </div>
+                        <div class="col-12 col-lg-6 col-xxl-4">
+                            <img src="./assets/img/submarine.png" alt>
+                        </div>
+
+                    </div>
+                </div>
+
             </section>
 
         </main>
