--- a/index.html
+++ b/index.html
@@ -78,7 +78,50 @@
                         <div class="col-12 col-lg-6 col-xxl-4">
                             <img src="./assets/img/submarine.png" alt>
                         </div>
-
+                    </div>
+                </div>
+            </section>
+            <section class="about text-light">
+                <div class="container text-center py-5 w-75">
+                    <h2>PORTFOLIO</h2>
+                    <div
+                        class="spacer d-flex justify-content-center align-items-center my-3">
+                        <div class="bar mx-2 bg_light"></div>
+                        <i class="fa-solid fa-star fa-2x"></i>
+                        <div class="bar mx-2 bg_light"></div>
+                    </div>
+                    <div class="row fw-bold">
+                        <div class="col-12 col-lg-6 col-xxl-6 px-5 text-start">
+                            <p>Freelancer is a free bootstrap theme created by
+                                Start
+                                Bootstrap. The download includes the complete
+                                source
+                                files including HTML, CSS, and JavaScript as
+                                well as
+                                optional LESS stylesheets for easy
+                                customization.
+                            </p>
+                        </div>
+                        <div class="col-12 col-lg-6 col-xxl-6 px-5 text-start">
+                            <p>Whether you're a student looking to showcase your
+                                work, a professional looking to attract clients,
+                                or
+                                a graphic artist looking to share your projects,
+                                this template is the perfect starting point!</p>
+                        </div>
+                    </div>
+                    <button class="btn btn-lg light border w-auto mt-3"><i
+                            class="fa-solid fa-download"></i> Download</button>
+                </div>
+            </section>
+            <section class="contact py-5">
+                <div class="container text-center">
+                    <h2>CONTACT ME</h2>
+                    <div
+                        class="spacer d-flex justify-content-center align-items-center my-4">
+                        <div class="bar mx-2 bg_dark"></div>
+                        <i class="fa-solid fa-star fa-2x dark"></i>
+                        <div class="bar mx-2 bg_dark"></div>
                     </div>
                 </div>
 
@@ -87,7 +130,32 @@
         </main>
 
         <footer>
+            <div class="container text-center py-5">
+                <div class="row light">
+                    <div class="col-12 col-lg-4">
+                        <h6>LOCATION</h6>
+                        <h6>2215 John Daniel Drive Clark, MO 54243</h6>
+                    </div>
+                    <div class="col-12 col-lg-4 py-3">
+                        <h6>AROUND THE WEB</h6>
+                        <ul class="list-inline d-flex justify-content-center py-2">
+                            <li class="mx-2 border rounded-circle"><a href="#"><i class="fa-brands fa-facebook-f light "></i></a></li>
+                            <li class="mx-2 border rounded-circle"><a href="#"><i class="fa-brands fa-google-plus-g light"></i></a></li>
+                            <li class="mx-2 border rounded-circle"><a href="#"><i class="fa-brands fa-twitter light"></i></a></li>
+                            <li class="mx-2 border rounded-circle"><a href="#"><i class="fa-brands fa-linkedin-in light"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <h6>ABOUT FREELANCER</h6>
+                        <p>Freelance is a free to use. open source Bootstrap theme created by <a class="text-decoration-none" href="">Start Bootstrap</a>.</p>
+                    </div>
 
+                </div>
+            </div>
+            <section class="copyright text-center py-5 light">
+                <h6>Copyright &#169; Your Website 2019</h6>
+
+            </section>
         </footer>
 
         <script
