Modify h1 and h2 sizes

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </section>
             <section class="about text-light">
                 <div class="container text-center py-5 w-75">
-                    <h2>PORTFOLIO</h2>
+                    <h2>ABOUT</h2>
                     <div
                         class="spacer d-flex justify-content-center align-items-center my-3">
                         <div class="bar mx-2 bg_light"></div>
