--- a/index.html
+++ b/index.html
@@ -21,12 +21,33 @@
     <body>
 
         <header>
+            <nav class="navbar navbar-expand-lg bg_dark py-4">
+                <div class="container">
+                  <a class="navbar-brand text-light fw-bold" href="#">START BOOTSTRAP</a>
+                  <button class="navbar-toggler border-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#portfolio">PORTFOLIO</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-light fw-bold" href="#about">ABOUT</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link text-light fw-bold" href="#contact">CONTACT</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
 
         </header>
 
         <main>
-            <section class="jumbotron text-light">
-                <div class="container">
+            <section id="jumbotron">
+                <div class="container text-light">
                     <div class="row justify-content-center py-4">
                         <div class="col-12 text-center ">
                             <div class="card-top">
@@ -49,7 +70,7 @@
                 </div>
             </section>
 
-            <section class="portfolio">
+            <section id="portfolio">
                 <div class="container text-center py-5">
                     <h2>PORTFOLIO</h2>
                     <div
@@ -81,8 +102,8 @@
                     </div>
                 </div>
             </section>
-            <section class="about text-light">
-                <div class="container text-center py-5 w-75">
+            <section id="about">
+                <div class="container text-center py-5 w-75 text-light">
                     <h2>ABOUT</h2>
                     <div
                         class="spacer d-flex justify-content-center align-items-center my-3">
@@ -114,8 +135,8 @@
                             class="fa-solid fa-download"></i> Download</button>
                 </div>
             </section>
-            <section class="contact py-5">
-                <div class="container text-center">
+            <section id="contact">
+                <div class="container text-center pt-5">
                     <h2>CONTACT ME</h2>
                     <div
                         class="spacer d-flex justify-content-center align-items-center my-4">
@@ -123,6 +144,21 @@
                         <i class="fa-solid fa-star fa-2x dark"></i>
                         <div class="bar mx-2 bg_dark"></div>
                     </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label"></label>
+                        <input type="none" class="form-control border-0 rounded-0 border-bottom" id="exampleFormControlInput1" placeholder="Name">
+                        <label for="exampleFormControlInput1" class="form-label"></label>
+                        <input type="email" class="form-control border-0 rounded-0 border-bottom" id="exampleFormControlInput1" placeholder="Email Address"><label for="exampleFormControlInput1" class="form-label"></label>
+                        <input type="none" class="form-control border-0 rounded-0 border-bottom" id="exampleFormControlInput1" placeholder="Phone Number">
+                      </div>
+                      
+                      <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label"></label>
+                        <textarea class="form-control border-0 rounded-0 border-bottom" id="exampleFormControlTextarea1" rows="8" placeholder="Message"></textarea>
+                    </div>
+                </div>
+                <div class="container pb-5">
+                    <button class="btn prsnl_bg_success text-light mt-4 ms-auto">Send</button>
                 </div>
 
             </section>
@@ -132,22 +168,29 @@
         <footer>
             <div class="container text-center py-5">
                 <div class="row light">
-                    <div class="col-12 col-lg-4">
+                    <div class="col-12 col-lg-4 pb-3">
                         <h6>LOCATION</h6>
-                        <h6>2215 John Daniel Drive Clark, MO 54243</h6>
+                        <p>2215 John Daniel Drive Clark, MO 54243</p>
                     </div>
-                    <div class="col-12 col-lg-4 py-3">
+                    <div class="col-12 col-lg-4">
                         <h6>AROUND THE WEB</h6>
-                        <ul class="list-inline d-flex justify-content-center py-2">
-                            <li class="mx-2 border rounded-circle"><a href="#"><i class="fa-brands fa-facebook-f light "></i></a></li>
-                            <li class="mx-2 border rounded-circle"><a href="#"><i class="fa-brands fa-google-plus-g light"></i></a></li>
-                            <li class="mx-2 border rounded-circle"><a href="#"><i class="fa-brands fa-twitter light"></i></a></li>
-                            <li class="mx-2 border rounded-circle"><a href="#"><i class="fa-brands fa-linkedin-in light"></i></a></li>
+                        <ul
+                            class="list-inline d-flex justify-content-center py-2">
+                            <li class="mx-2 border rounded-circle"><a href="#"><i
+                                        class="fa-brands fa-facebook-f light "></i></a></li>
+                            <li class="mx-2 border rounded-circle"><a href="#"><i
+                                        class="fa-brands fa-google-plus-g light"></i></a></li>
+                            <li class="mx-2 border rounded-circle"><a href="#"><i
+                                        class="fa-brands fa-twitter light"></i></a></li>
+                            <li class="mx-2 border rounded-circle"><a href="#"><i
+                                        class="fa-brands fa-linkedin-in light"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-12 col-lg-4">
                         <h6>ABOUT FREELANCER</h6>
-                        <p>Freelance is a free to use. open source Bootstrap theme created by <a class="text-decoration-none" href="">Start Bootstrap</a>.</p>
+                        <p>Freelance is a free to use. open source Bootstrap
+                            theme created by <a class="text-decoration-none"
+                                href>Start Bootstrap</a>.</p>
                     </div>
 
                 </div>
