Add filter: invert to nav icon

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="container">
                   <a class="navbar-brand text-light fw-bold" href="#">START BOOTSTRAP</a>
                   <button class="navbar-toggler border-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon invert"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
