--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <span class="navbar-toggler-icon invert"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav ms-auto">
                       <li class="nav-item">
                         <a class="nav-link active text-light fw-bold" aria-current="page" href="#portfolio">PORTFOLIO</a>
                       </li>
